Fixing Bug for Table where entries were not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .menu {
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
   overflow-y: scroll;
 }
